include_HEADERS = \
	libfcrypto.h

pkginclude_HEADERS = \
	libfcrypto/definitions.h \
	libfcrypto/error.h \
	libfcrypto/extern.h \
	libfcrypto/features.h \
	libfcrypto/types.h

EXTRA_DIST = \
	libfcrypto.h.in \
	libfcrypto/definitions.h.in \
	libfcrypto/features.h.in \
	libfcrypto/types.h.in

DISTCLEANFILES = \
	libfcrypto.h \
	libfcrypto/definitions.h \
	libfcrypto/features.h \
	libfcrypto/types.h \
	Makefile \
	Makefile.in

