MSVSCPP_FILES = \
	fcrypto_test_blowfish_context/fcrypto_test_blowfish_context.vcproj \
	fcrypto_test_des3_context/fcrypto_test_des3_context.vcproj \
	fcrypto_test_error/fcrypto_test_error.vcproj \
	fcrypto_test_rc4_context/fcrypto_test_rc4_context.vcproj \
	fcrypto_test_serpent_context/fcrypto_test_serpent_context.vcproj \
	fcrypto_test_support/fcrypto_test_support.vcproj \
	libcerror/libcerror.vcproj \
	libfcrypto/libfcrypto.vcproj \
	pyfcrypto/pyfcrypto.vcproj \
	libfcrypto.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

DISTCLEANFILES = \
	Makefile \
	Makefile.in

